# TestAttest

./: .env.example  .gitignore  LICENSE.md  README.md  bot.py  config.py  pyproject.toml  requirements.txt
data/: lexicon_en.py  lexicon_eng.py  lexicon_ru.py  lexicon_rus.py
database/: __init__.py  admin_connect.py  database.py  user_connect.py
database/models/: answer.py  base.py  incorrect_answer.py  question.py  result.py  test.py  user.py
handlers/: __init__.py  admin_handlers.py  old_admin_handlers.py  old_user_handlers.py  user_handlers.py
handlers/admin_handlers/: __init__.py  navigation.py  question.py  state.py  states.py  test.py
handlers/user_handlers/: __init__.py  navigation.py  process_testing.py  states.py
keyboard/: __init__.py  keyboard_builder.py  menu.py
tests/tests_database/: test_admin_connect.py  test_database.py
utils/: __init__.py  admin_utils.py
