[tool.poetry]
authors = ["Victor Ryabov <victorwillhard@gmail.com>"]
description = ""
name = "testattest"
readme = "README.md"
version = "0.5.0"

[tool.poetry.dependencies]
aiogram = "3.0.0rc2"
environs = "^9.5.0"
python = "^3.11"
sqlalchemy = "^2.0.20"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
ruff = "^0.0.287"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.black]
line-length = 79

[tool.isort]
profile = "black"