[tool.poetry]
authors = ["Victor Ryabov <victorwillhard@gmail.com>"]
description = ""
name = "testattest"
readme = "README.md"
version = "0.5.0"

[tool.poetry.dependencies]
environs = "^9.5.0"
python = "^3.11"
sqlalchemy = "^2.0.20"
aiogram = "^3.0.0"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.black]
line-length = 79